chore: dependency maintenance — 2026-05-23
## Dependency upgrades

### BOM / top-level
- tools.jackson:jackson-bom: 3.0.3 → 3.1.3
- spring-cloud-dependencies: 2025.1.0 → 2025.1.1
- org.springframework.ai:spring-ai-bom: preserved at 2.0.0-M7 (RC opt-in)
- org.springframework.boot:spring-boot-starter-parent: preserved at 4.1.0-RC1 (RC opt-in)

### Root pom.xml properties
- cfenv.version: 3.5.0 → 3.5.1
- json-io.version: 4.81.0 → 4.102.0
- swagger-annotations.version: 2.2.41 → 2.2.42
- assertj.version: 3.27.6 → 3.27.7

### Module-level
- backend/pom.xml: org.postgresql:postgresql 42.7.8 → 42.7.11 (security: GHSA-98qh-xjc8-98pq, CVE-2026-42198)
- client/pom.xml: openapi-generator-maven-plugin 7.18.0 → 7.19.0
- mcp-client/pom.xml: mcp-client-security 0.0.5 → 0.1.11 (security: GHSA-qjp4-4jvr-xqg3, CVE-2026-45609)

### versions:use-latest-releases (stable-only)
- commons-io: 2.21.0 → 2.22.0 (client module)
- javaparser-core: 3.28.0 → 3.28.1 (codegen module)
- javaparser-symbol-solver-core: 3.28.0 → 3.28.1 (codegen module)
- testcontainers: 2.0.3 → 2.0.5 (mcp-client module)

### Plugin upgrades
- spotless-maven-plugin: 3.1.0 → 3.5.1

## Security alerts resolved
- #10 GHSA-qjp4-4jvr-xqg3 (CVE-2026-45609): mcp-client-security 0.0.5 → 0.1.11
- #7 GHSA-98qh-xjc8-98pq (CVE-2026-42198): postgresql 42.7.8 → 42.7.11
- #9 GHSA-v39h-62p7-jpjc (CVE-2026-6322): fast-uri >=3.1.2 via pnpm override
- #8 GHSA-q3j6-qgpj-74h6 (CVE-2026-6321): fast-uri >=3.1.1 via pnpm override
- #5 GHSA-c2c7-rcm5-vvqj (CVE-2026-33671): picomatch >=2.3.2 via pnpm override
- #6 GHSA-3v7f-55p6-f55p (CVE-2026-33672): picomatch >=2.3.2 via pnpm override
- #4 GHSA-2g4f-4pwh-qvx6 (CVE-2025-69873): ajv >=8.18.0 via pnpm override
- #3 GHSA-38c4-r59v-3vqw (CVE-2026-2327): markdown-it >=14.1.1 via pnpm override

## npm / pnpm security
- package.json pnpm.overrides: added fast-uri>=3.1.2, picomatch>=2.3.2, ajv>=8.18.0, markdown-it>=14.1.1
- pnpm install regenerated pnpm-lock.yaml with patched transitive versions

## Git